# industrial-can-sensor-node

./: .gitignore  README.md
docs/: architecture_comparison.md  build_plan.md  design_calculations.md  design_decisions.md  erc_notes.md  pcb_plan.md  progress.md  requirements.md  research_notes.md  system_architecture.md
firmware/: CMakeLists.txt  README.md
firmware/inc/: adc_processing.h  app_config.h  can_protocol.h  fault_manager.h  motor_control.h  platform.h
firmware/src/: adc_processing.c  can_protocol.c  fault_manager.c  main.c  motor_control.c  platform_stub.c
hardware/: bom.csv
hardware/kicad/: README.md  drc_2026-07-12-pcb-prep.rpt  erc_2026-07-12-current.rpt  erc_2026-07-12.rpt
hardware/ltspice/: README.md  v1_current_sense_filter.cir  v1_low_side_motor_switch.cir  v1_voltage_divider_filter.cir
hardware/ltspice/results/: README.md  current_sense_output.csv  motor_switch_voltage_current_flyback.csv  supply_divider_output.csv
kicad/: fp-lib-table  kicad.kicad_pcb  kicad.kicad_pro  kicad.kicad_sch  sym-lib-table  v1_symbols.kicad_sym
kicad/project_footprints.pretty/: Littelfuse_RXEF110.kicad_mod  OnShore_OSTVN02A150.kicad_mod  OnShore_OSTVN03A150.kicad_mod
